--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ cache:
   directories:
     - $HOME/.stack/
 
+env:
+  - FLAGS=""
+  - FLAGS="--flag ether:disable-tup-instances"
+
 before_install:
   - mkdir -p ~/.local/bin
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
@@ -15,8 +19,8 @@ install:
  - stack install --only-dependencies --no-terminal
 
 script:
- - stack test ether:regression --no-terminal --ghc-options -Werror
- - stack bench ether:bench --no-terminal --ghc-options -Werror
+ - stack test ether:regression --no-terminal --ghc-options -Werror $FLAGS
+ - stack bench ether:bench --no-terminal --ghc-options -Werror $FLAGS
 
 addons:
   apt:
