--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-tags
+# Cabal
 dist
 dist-newstyle
-.stack-work
 .cabal-sandbox/
 cabal.sandbox.config
+cabal.project.local
+.ghc.environment*
+
+# Profiling
+*.prof
+
+# Stack
+.stack-work
+
+# Emacs
+TAGS
+.dir-locals.el
+
+# Vim
+tags
+*.swp
